[#881](fix) Close gap on timerange render

--- a/application/client.core/src/app/environment/components/views/row/styles.less
+++ b/application/client.core/src/app/environment/components/views/row/styles.less
@@ -154,7 +154,7 @@
                         border-top: none;
                         border-right: none;
                         border-bottom: none;
-                        height: 150%;
+                        height: 185%;
                         top: ~"calc(-50% + 2px);";
                     }
                     &.open {
